tests/semantic_cases/invalid/typed_var_unknown_type.ob0
(* INVALID: typed variable references unknown type name *)
MODULE Main;
VAR x: Missing;
BEGIN
  x := 1
END Main.
